--- a/general.css
+++ b/general.css
@@ -14,7 +14,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: -1;
 }
 
 .container {
@@ -30,7 +30,7 @@ body {
 .title {
     font-weight: 700;
     font-size: 2.5rem;
-    color: #FBDE44;
+    color: #3640B5;
 }
 
 .subtitle {
